# wesl-distribution

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/compile-time-compile/: CMakeLists.txt  main.c
examples/compile-time-compile/cmake/: shaders.cmake  wgsl_to_h.cmake
examples/compile-time-compile/shaders/: main.wesl  math.wesl
examples/import-example/: CMakeLists.txt  main.c
